2004-09-29  Don Porter  <dgp@users.sourceforge.net>

	* tests/basic.test (49.*):	New tests for TCL_EVAL_GLOBAL.

2004-09-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclVar.c (TclObjLookupVar, TclObjLookupVar): 
	(TclObjUnsetVar2, SetArraySearchObj): 
	* generic/tclUtil.c (SetEndOffsetFromAny): 
	* generic/tclStringObj.c (Tcl_SetStringObj): 
	(Tcl_SetUnicodeObj, SetStringFromAny): 
	* generic/tclResult.c (ResetObjResult): 
	* generic/tclRegexp.c (Tcl_GetRegExpFromObj): 
	* generic/tclPathObj.c (TclFSMakePathRelative, SetFsPathFromAny): 
	(TclFSMakePathFromNormalized, Tcl_FSNewNativePath): 
	* generic/tclObj.c (TclFreeObj, Tcl_SetBooleanObj, SetBooleanFromAny): 
	(Tcl_SetDoubleObj, SetDoubleFromAny, Tcl_SetIntObj): 
	(SetIntOrWideFromAny, Tcl_SetLongObj, SetWideIntFromAny): 
	(Tcl_SetWideIntObj, TclSetCmdNameObj, SetCmdNameFromAny): 
	* generic/tclNamesp.c (SetNsNameFromAny, MakeCachedEnsembleCommand): 
	* generic/tclListObj.c (Tcl_SetListObj, SetListFromAny): 
	* generic/tclIndexObj.c (Tcl_GetIndexFromObjStruct): 
	* generic/tclDictObj.c (SetDictFromAny): 
	* generic/tclCompile.c (TclInitByteCodeObj): 
	* generic/tclBinary.c (Tcl_SetByteArrayObj, SetByteArrayFromAny): 
	* generic/tclInt.h (TclFreeIntRep): Factorize out deletion of object
	internal representation to a shared macro, so simplifying much code.

2004-09-27  Miguel Sofer <msofer@users.sf.net>

	* generic/tclBasic.c (TclObjInvoke): fix for bogus gcc warning
	about uninitialised variable.

2004-09-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Removed internal routines TclInvoke,
	* generic/tclInt.decls: TclGlobalInvoke, TclObjInvokeGlobal and
	* tests/basic.test:	the portion of TclObjInvoke that handles
	calls without TCL_INVOKE_HIDDEN enabled.  None of this code is
	called any longer within the core, and the superior public
	interface, Tcl_EvalObjv, is available for any external callers.

	* generic/tclIntDecls.h:	make genstubs
	* generic/tclStubInit.c:
