@@ -220,6 +220,21 @@ test subst-11.6 {continue in a variable subst} {
     subst {foo $var([continue]) bar}
 } {foo  bar}
 
+test subst-12.1 {nasty case, Bug 1036649} {
+    for {set i 0} {$i < 10} {incr i} {
+	set res [list [catch {subst "\[subst {};"} msg] $msg]
+	if {$msg ne "missing close-bracket"} break
+    }
+    set res
+} {1 {missing close-bracket}}
+test subst-12.2 {nasty case, Bug 1036649} {
+    for {set i 0} {$i < 10} {incr i} {
+	set res [list [catch {subst "\[subst {}; "} msg] $msg]
+	if {$msg ne "missing close-bracket"} break
+    }
+    set res
+} {1 {missing close-bracket}}
+
 # cleanup
 ::tcltest::cleanupTests
 return
