@@ -1,3 +1,7 @@
+2004-09-30  Miguel Sofer <msofer@users.sf.net>
+
+	* tests/subst.test (12.1-2): added tests for [Bug 1036649]
+
 2004-09-29  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/basic.test (49.*):	New tests for TCL_EVAL_GLOBAL.
